Nom zeeleh section-iig hugacaa oruulj irsen, mun zeeleh hugacaag sungadag bolsogosn
